--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <div id="player-container">
         <div id="player"></div> 
         
+        <div id="selector-menu" class="selector-menu">
+            <h2>Selecciona tu Misión Musical</h2>
+            <div id="video-list-container" class="video-list-container">
+                </div>
+        </div>
+
         <div id="overlay-graphics">
             
             <div id="warp-overlay"></div>
