--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                         <li><strong>Todos los integrantes del Equipo</strong> disfrutarán de una Misión divertida, cómoda y descontracturada. <strong>Sin excepciones</strong>. Con actitud positiva, predispuesta y de respeto mutuo.</li>
 
-                        <li>El cuidado integral es prioritario.<strong>Nadie del Equipo</strong> deberá esforzarse ni estresarse de más. Integrarás un Equipo solidario, autonomo y colaborativo.</br></li></ul></li><p></p>
+                        <li>El cuidado integral es prioritario.<strong>Nadie del Equipo</strong> deberá esforzarse ni estresarse de más. Integrarás un Equipo solidario, autonomo y colaborativo.<br /><br /><br /></li></ul></li>
 
 
                     <li><h3><strong>LIBERTAD</strong></h3><ul>
@@ -359,7 +359,7 @@
 
                         <li>Al igual que todos los integrantes del Equipo, tendrás <strong>libre acceso</strong> (con algunos requerimientos según tu rol) a: las actividades y Desafíos, los lugares habilitados, y los suministros (identificación, accesorios, comida y bebida durante toda la Misión; y cotillón durante el Baile Carioca).</li>
 
-                        <li>Podrás realizar la Misión <strong>con ropa y calzado cómodos</strong>, pudiendo estar sin calzados todo el tiempo.</br></li></ul></li><p></p>
+                        <li>Podrás realizar la Misión <strong>con ropa y calzado cómodos</strong>, pudiendo estar sin calzados todo el tiempo.<br /><br /><br /></li></ul></li>
 
 
                     <li><h3><strong>PRIORIDAD</strong></h3><ul>
@@ -476,7 +476,7 @@
 
                             <p>Como <span class="comando">Jurado</span> recibirás el listado de Distinciones con sus respectivos criterios evaluativos, una planilla para tus resultados parciales y otra de resultados finales del <span class="comando">Jurado</span>, específicos del Desafío. También se te asignará un espacio y tiempo para las deliberaciones al finalizar el Desafío junto a los otros integrantes del Jurado.</p>
 
-                            <p>Una vez definidos quienes serán reconocidos por su desempeño en el Desafío, el <span class="comando">Jurado</span> entregará al comandante estelar la planilla de resultados finales con sus decisiones, y éste anunciará los resultados, llamando a los integrantes del Equipo para que reciban sus insignias.</p>
+                            <p>Una vez definidos quienes serán reconocidos por su desempeño en el Desafío, el <span class="comando">Jurado</span> entregará al comandante estelar la planilla de resultados finales con sus decisiones, y éste anunciará los resultados, llamando a los integrantes del Equipo para que reciban sus insignias.</p><h3><br /><br /></h3>
 
             </div>
         </section>
